--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <h2>Lecture Days, Time, and Place:</h2>
 <p> Day? 1:50-3:05 pm, In Person and on Canvas </p>
 
-<h2>Course Catalog Description</h2>
+<h2>Course Catalog Description:</h2>
 <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures. <b>Prerequisites</b>: [none] <b>Credit</b>: 2-2-3 Semester Hours</p>
 
 
